// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`details > renders as div version 1`] = `
"<details
  as="div"
  class="details"
>
  <summary
    class="details__summary"
  >
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;

exports[`details > renders basic version 1`] = `
"<details
  class="details"
>
  <summary
    class="details__summary"
  >
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;

exports[`details > renders center version 1`] = `
"<details
  class="details"
>
  <summary
    class="details__summary details__summary--center"
  >
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;

exports[`details > renders in open state 1`] = `
"<details
  class="details"
  open=""
>
  <summary
    class="details__summary"
  >
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;

exports[`details > renders small version 1`] = `
"<details
  class="details"
>
  <summary
    class="details__summary details__summary--small"
  >
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;

exports[`details > renders with leading element 1`] = `
"<details
  class="details"
>
  <summary
    class="details__summary"
  >
    <span
      class="details__leading"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M4.548 12.306c-.354-1.058-.863-1.89-1.187-2.42a6.934 6.934 0 0 1-.255-.439l.003.006-.007-.01-.036-.062-.004-.007a8.482 8.482 0 0 1-.517-.987C2.279 7.781 2 6.94 2 6a6 6 0 1 1 12 0c0 .94-.278 1.781-.546 2.387a8.484 8.484 0 0 1-.383.76l-.133.227-.004.007-.036.061-.007.011.003-.006a6.78 6.78 0 0 1-.255.438c-.324.53-.832 1.361-1.186 2.418a.716.716 0 0 1-.004.013l-.658 1.975A2.5 2.5 0 0 1 8.419 16H7.58a2.5 2.5 0 0 1-2.372-1.71l-.658-1.975a.62.62 0 0 1-.003-.01ZM4 6a4 4 0 1 1 8 0c0 .989-.483 1.829-.758 2.306-.054.094-.1.175-.132.239l-.003.005-.036.058-.062.102-.07.115A20.015 20.015 0 0 0 10.271 10H9V7.478l.868-.7a1 1 0 1 0-1.256-1.556L8 5.716l-.623-.5a1 1 0 0 0-1.252 1.56L7 7.479V10H5.728a20.021 20.021 0 0 0-.666-1.175l-.07-.114a24.872 24.872 0 0 1-.098-.161l-.004-.006c-.032-.064-.078-.143-.132-.238C4.483 7.83 4 6.99 4 6Zm2.554 6h2.892l-.553 1.658A.5.5 0 0 1 8.42 14h-.84a.5.5 0 0 1-.474-.342L6.554 12Z"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-lightbulb-16"
        />
      </svg>
    </span>
    <span
      class="details__label"
    >
      Details
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <div
    class="details__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</details>"
`;
